[package]
name = "app"
version = "0.1.0"
description = "A Quasar Tauri App"
author = [ ]
license = ""
repository = ""
default-run = "app"

[package.metadata.bundle]
identifier = "com.quasar.dev"
icon = [
  "icons/32x32.png",
  "icons/128x128.png",
  "icons/128x128@2x.png",
  "icons/icon.icns",
  "icons/icon.ico"
]

[dependencies]
serde_json = "1.0.39"
serde = "1.0"
serde_derive = "1.0"
tiny_http = "0.6"
phf = "0.7.21"
includedir = "0.5.0"

  [dependencies.tauri-ui]
  path = "../node_modules/@quasar/tauri/bindings/rust"

  [dependencies.tauri]
  path = "../node_modules/@quasar/tauri/lib/rust"
  features = [ ]

[features]
dev = [ "tauri/dev" ]
embedded-server = [ "tauri/embedded-server" ]

[[bin]]
name = "updater"
path = "src/updater.rs"

[[bin]]
name = "app"
path = "src/main.rs"
