[package]
name = "app"
version = "0.1.0"
authors = ["Lucas Fernandes Nogueira <lucasfernandesnog@gmail.com>"]
edition = "2018"
build = "build.rs"
include = ["data"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web-view = { git = "https://github.com/Boscop/web-view" }
serde_json = "1.0.39"
serde = "1.0"
serde_derive = "1.0"
rouille = "3.0.0"
clap = {version = "2.33", features = ["yaml"]}
phf = "0.7.21"
includedir = "0.5.0"
proton = { path = "./lib" }

[build-dependencies]
includedir_codegen = "0.5.0"

[features]
dev = [] # has no explicit dependencies
prod = [] # has no explicit dependencies
